--- a/src/style/style.less
+++ b/src/style/style.less
@@ -1,7 +1,9 @@
+@import (less) "../components/normalize-css/normalize.css";
 @import url(variables.less);
 
 @import url(blocks/page-navigation.less);
 @import url(blocks/page-slaider.less);
 @import url(blocks/page-information.less);
+@import url(blocks/page-footer.less);
 
 @import url(animation.less);
