--- a/src/style/blocks/page-information.less
+++ b/src/style/blocks/page-information.less
@@ -1,5 +1,7 @@
 .page-information{
 	background-color: #fafafa;
+	padding-bottom: 55px;
+	border-bottom: 1px solid #ddd;
 }
 
 .page-information p{
@@ -10,7 +12,6 @@
 	.page-information__wraper{
 		width: 936px;
 		margin: 0 auto;
-		background-color: #ffffff;
 		border: 1px solid #eee;
 		border-top: 60px solid #ddd;
 		border-radius: 20px;
@@ -19,10 +20,6 @@
 		margin-top: -60px;
 	}
 
-
-.page-information__wraper{
-
-}
 
 	.page-information__header{
 		background-color: #ebebeb;
@@ -35,7 +32,7 @@
 		text-align: center;
 		padding-top: 40px;
 	} 
-.page-information__header h1{
+.page-information__header h2{
 		text-transform: uppercase;
 		margin: 0;
 		padding: 0;
@@ -62,7 +59,8 @@
 	height: 180px;
 	font-size: 20px;
 	background-color: #f4f4f4;
-	background-image: linear-gradient(to top, #dbdbdb,#f8f8f8);
+	background-repeat: no-repeat;
+	background-position: 50% 50%;
 	border-radius: 50%;
 	margin: 0 auto;
 	transition: all 1s;
@@ -70,7 +68,7 @@
 	vertical-align: middle;
 	text-align: center;
 	text-decoration: none;
-	color:#eaeaea;
+	color: transparent;
 
 	&:hover{
 		background-image: none;
@@ -78,6 +76,17 @@
 		color: #fff;
 	}
 }
+
+.table-item__link--first{
+		background-image: url(../img/information-1.png);
+}
+.table-item__link--second{
+		background-image: url(../img/information-2.png);
+}
+.table-item__link--third{
+		background-image: url(../img/information-3.png);
+}
+
 
 .table__table-item h2{
 	text-align: center;
@@ -89,7 +98,22 @@
 .table__table-item p{
 	color:#888383;
 	line-height: 1.5;
-	text-align: justify;
+	text-align: center;
 	margin-bottom: 10px;
 }
+
+
+/* .table__table-item:nth-of-type(1)::before{
+	content: "";
+	position: absolute;
+	// display: inline-block;
+	width: 60%;
+	height: 50px;
+	background-color: transparent;
+	bottom: 10px;
+	left: 15px;
+	box-shadow: 0 15px 10px rgba(0, 0, 0, 0.5);
+	transform: rotate(-2deg);
+	z-index: 0;
+} */
 
