--- a/src/style/blocks/page-navigation.less
+++ b/src/style/blocks/page-navigation.less
@@ -1,13 +1,15 @@
 .page-header{
-	display: flex;
 	box-shadow: 0 1px 5px 0 black;
 
+	width: 100%;
+}
+
+.page-header__wrapper{
+	max-width: 936px;
+	margin: 0 auto;
+	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	// position: fixed;
-	// left: 0;
-	// top: 0;
-	width: 100%;
 }
 
 .page-header__logo{
@@ -40,8 +42,8 @@
 	display: inline-block;
 
 	height: 50px;
-	padding-right: 5px;
-	padding-left: 5px;
+	padding-right: 10px;
+	padding-left: 10px;
 
 	vertical-align: middle;
 	text-decoration: none;
