--- a/src/style/style.less
+++ b/src/style/style.less
@@ -5,5 +5,6 @@
 @import url(blocks/page-slaider.less);
 @import url(blocks/page-information.less);
 @import url(blocks/page-footer.less);
+@import url(blocks/main-information.less);
 
 @import url(animation.less);
