--- a/src/style/blocks/page-slaider.less
+++ b/src/style/blocks/page-slaider.less
@@ -1,5 +1,5 @@
 .page-slaider{
-	height: 500px;
+	// height: 500px;
 	background-image: url(../img/bg.png);
 	border-bottom: 1px solid #b8b8b8;
 	overflow: hidden;
@@ -158,28 +158,11 @@ img{
 
 }
 
-
-.slaider-item__btn{
-	display: inline-block;
-	text-decoration: none;
-	color: #fff;
-	background-image: linear-gradient(to top ,#d47138, lighten(#f2836d,5%));
-	height: 40px;
-	line-height: 40px;
-	vertical-align: middle;
-	padding-left: 8px;
-	padding-right: 8px;
-	border-radius:5px;
-	box-shadow: -1px 3px 2px 0 #9C99B2;
-	margin-top: 50px;
-	animation-name:item-von-oben-slogan;
+.btn--slaider-item{
 	animation-duration: 3s;
-
+	animation-name:item-von-oben-slogan;
+	margin-top: 50px;
 	&:active{
-		margin-top: 52px;
-		box-shadow: -1px 1px 2px 0 #9C99B2;
-	}
-	&:hover{
-			background-image: linear-gradient(to top ,darken(#d47138,10%), darken(lighten(#f2836d,5%),10%));
+		margin-top: 52px;	
 	}
 }
