--- a/src/style/blocks/page-slaider.less
+++ b/src/style/blocks/page-slaider.less
@@ -166,3 +166,16 @@ img{
 		margin-top: 52px;	
 	}
 }
+
+@media @tablet-widths{
+	img{
+		width: auto;
+		height: 50%;
+	}
+	.slaider-item__slogan{
+		font-size: 30px;
+	}
+	.slaider-item__img--first{
+		margin-left: 30px;
+	}
+}
