--- a/src/style/style.less
+++ b/src/style/style.less
@@ -8,3 +8,10 @@
 @import url(blocks/main-information.less);
 
 @import url(animation.less);
+	
+
+	@media @mobile-widths {
+	*{
+		display: none;
+	}
+}
