добавил немного адаптива(меню) для моильного устройства

--- a/src/style/blocks/page-information.less
+++ b/src/style/blocks/page-information.less
@@ -153,3 +153,12 @@
 		
 	}
 }
+
+@media @mobile-widths{
+	.page-information__table{
+		display: none;
+	}
+	.page-information__shadow{
+		display: none;
+	}
+}
