--- a/src/style/style.less
+++ b/src/style/style.less
@@ -10,8 +10,8 @@
 @import url(animation.less);
 	
 
-	@media @mobile-widths {
+	@media @tablet-widths {
 	*{
-		display: none;
+		// display: none;
 	}
 }
