добавил адаптивность для мобильных устройств

--- a/src/style/blocks/page-information.less
+++ b/src/style/blocks/page-information.less
@@ -1,164 +1,188 @@
 .page-information{
-	background-color: #fafafa;
-	border-bottom: 1px solid #ddd;
+  background-color: #fafafa;
+  border-bottom: 1px solid #ddd;
 }
 
-	.page-information__wraper{
-		max-width: 936px;
-		margin: 0 auto;
-		position: relative;
-	}
+.page-information__wraper{
+  max-width: 936px;
+  margin: 0 auto;
+  position: relative;
+}
 
 
-	.page-information__header{
-		background-color: #ebebeb;
-		border-top: 60px solid #ddd;
-		border-top-right-radius: 20px;
-		border-top-left-radius: 20px;
-		position: relative;
-		margin-top: -60px;
-	}
+  .page-information__header{
+    background-color: #ebebeb;
+    border-top: 60px solid #ddd;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    position: relative;
+    margin-top: -60px;
+  }
 
 .page-information__header p{
-		font-size: 26px;
-		padding: 0;
-		margin: 0;
-		text-align: center;
-		padding-top: 40px;
-	} 
+    font-size: 26px;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    padding-top: 40px;
+  } 
 .page-information__header h2{
-		text-transform: uppercase;
-		margin: 0;
-		padding: 0;
-		color: #D37141;
-		text-align: center;
-		padding-bottom: 40px;
-		font-size: 30px;
-		letter-spacing: 10px;
-		font-weight: normal;
-		margin-top: 10px;
-	} 
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    color: #D37141;
+    text-align: center;
+    padding-bottom: 40px;
+    font-size: 30px;
+    letter-spacing: 10px;
+    font-weight: normal;
+    margin-top: 10px;
+  } 
 
-	.page-information__table{
-		display: flex;
-		border: 1px solid #eee;
-		background-color: #fff;
-		padding-bottom: 40px;
-		margin-bottom: 40px;
-		border-bottom-right-radius:15px;
-		border-bottom-left-radius: 15px;
-		position: relative;
-	}
+  .page-information__table{
+    display: flex;
+    border: 1px solid #eee;
+    background-color: #fff;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    border-bottom-right-radius:15px;
+    border-bottom-left-radius: 15px;
+    position: relative;
+  }
 
 .table__table-item{
-	flex:1;
-	padding-left: 30px;
-	padding-right: 30px;
-	margin-top: 60px;
-	}
+  flex:1;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-top: 60px;
+  }
 
 .table-item__link{
-	display: block;
-	width: 180px;
-	height: 180px;
-	font-size: 20px;
-	background-color: #f4f4f4;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
-	border-radius: 50%;
-	margin: 0 auto;
-	transition: all 1s;
-	line-height: 180px;
-	vertical-align: middle;
-	text-align: center;
-	text-decoration: none;
-	color: transparent;
+  display: block;
+  width: 180px;
+  height: 180px;
+  font-size: 20px;
+  background-color: #f4f4f4;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  border-radius: 50%;
+  margin: 0 auto;
+  transition: all 1s;
+  line-height: 180px;
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  color: transparent;
 
-	&:hover{
-		background-image: none;
-		background-color: #D57840;
-		color: #fff;
-	}
+  &:hover{
+    background-image: none;
+    background-color: #D57840;
+    color: #fff;
+  }
 }
 
 .table-item__link--first{
-		background-image: url(../img/information-1.png);
+    background-image: url(../img/information-1.png);
 }
 .table-item__link--second{
-		background-image: url(../img/information-2.png);
+    background-image: url(../img/information-2.png);
 }
 .table-item__link--third{
-		background-image: url(../img/information-3.png);
+    background-image: url(../img/information-3.png);
 }
 
 
 .table__table-item h2{
-	text-align: center;
-	color: #E78748;
-	margin-top: 40px;
-	margin-bottom: 40px;
+  text-align: center;
+  color: #E78748;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .table__table-item p{
-	color:#888383;
-	line-height: 1.5;
-	text-align: center;
-	margin-bottom: 10px;
+  color:#888383;
+  line-height: 1.5;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 
 
 .page-information__shadow::before, .page-information__shadow::after{
 // .page-information__shadow::before{
-	content: "";
-	display: inline-block;
-	width: 468px;
-	height: 10px;
-	position: absolute;
-	bottom: 12px;
-	box-shadow: 0 15px 10px rgba(0,0,0,0.6);
+  content: "";
+  display: inline-block;
+  width: 468px;
+  height: 10px;
+  position: absolute;
+  bottom: 12px;
+  box-shadow: 0 15px 10px rgba(0,0,0,0.6);
 }
 
 .page-information__shadow::before{
-	// left: 50%;
-	// margin-left: -450px;
-	transform:rotate(-2deg);
-	left: 2%;
+  // left: 50%;
+  // margin-left: -450px;
+  transform:rotate(-2deg);
+  left: 2%;
 }
 
 
 .page-information__shadow::after{
-	// right: 50%;
-	// margin-right: -450px;
-	transform:rotate(2deg);
-	right: 2%;
+  // right: 50%;
+  // margin-right: -450px;
+  transform:rotate(2deg);
+  right: 2%;
 }
 
 @media @tablet-widths{
-	.table__table-item p{
-		font-size: 14px;
-	}
+  .table__table-item p{
+    font-size: 14px;
+  }
 
-	.table-item__link{
-		width: 160px;
-		height: 160px;
-		line-height: 160px;
-	}
+  .table-item__link{
+    width: 160px;
+    height: 160px;
+    line-height: 160px;
+  }
 
-	.wrapper{
-		max-width: 750px;
-	}
+  .wrapper{
+    max-width: 750px;
+  }
 
-	.leistung-img img{
-		
-	}
+  .leistung-img img{
+    
+  }
 }
 
 @media @mobile-widths{
-	.page-information__table{
-		display: none;
-	}
-	.page-information__shadow{
-		display: none;
-	}
+
+  .page-information__wraper{
+    width: 100%;
+  }
+  .page-information__table{
+    display: flex;
+    flex-direction: column;    
+  }
+
+  .table__table-item{
+    border-bottom: 1px solid #777777;
+    &:nth-child(3){
+      border-bottom: none;
+    }
+  }
+
+  .table__table-item p{
+    text-align: justify;
+  }
+
+  .table-item__link{
+    width: 100px;
+    height: 100px;
+    line-height: 100px;
+    background-size: 50%;
+  }
+
+  .page-information__shadow{
+    display: none;
+  }
 }
